Fix SQ issues